testdata/invalid/internal/domain/payment/core/model/pkg_leak.go
package model

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/pkg"
